<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/imgBackground"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_220"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:scaleType="centerCrop"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_220"
        android:background="@drawable/bg_gradient"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/shp_circle_primary"
                android:contentDescription="@string/title_content_des_img_back"
                android:padding="@dimen/size_5"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/white" />
        </RelativeLayout>
    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_140"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_80"
                android:paddingBottom="@dimen/padding_16">

                <View
                    android:id="@+id/viewCover"
                    android:layout_width="@dimen/size_150"
                    android:layout_height="@dimen/size_170"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/margin_16"/>

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_16"
                    android:text="@string/title_movie"
                    android:textSize="@dimen/font_18"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvRelease"
                    style="@style/textViewCustomLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/margin_8"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    tools:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover"
                    app:layout_constraintTop_toBottomOf="@+id/tvTitle"
                    app:drawableStartCompat="@drawable/ic_baseline_date_range_24" />

                <TextView
                    android:id="@+id/tvPopularity"
                    style="@style/textViewCustomLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    tools:text=""
                    android:layout_marginTop="@dimen/margin_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover"
                    app:layout_constraintTop_toBottomOf="@+id/tvRelease"
                    app:drawableStartCompat="@drawable/ic_baseline_preview_24" />

                <TextView
                    android:id="@+id/tvRating"
                    style="@style/textViewCustomLight"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:drawablePadding="@dimen/padding_8"
                    android:gravity="center_vertical"
                    tools:text=""
                    android:layout_marginTop="@dimen/margin_8"
                    app:drawableStartCompat="@drawable/ic_baseline_stars_black_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewCover"
                    app:layout_constraintTop_toBottomOf="@+id/tvPopularity" />

                <View
                    android:id="@+id/viewDes"
                    android:layout_width="@dimen/spacing_medium"
                    android:layout_height="@dimen/spacing_mxxlarge"
                    android:layout_marginTop="@dimen/margin_24"
                    android:background="@color/colorPrimary"
                    app:layout_constraintStart_toStartOf="@+id/viewCover"
                    app:layout_constraintTop_toBottomOf="@+id/viewCover" />

                <TextView
                    android:id="@+id/tvLabelDes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8"
                    android:text="@string/title_description"
                    android:textColor="@color/colorText"
                    android:textSize="@dimen/font_20"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="@+id/viewDes"
                    app:layout_constraintStart_toEndOf="@+id/viewDes"
                    app:layout_constraintTop_toTopOf="@+id/viewDes" />

                <TextView
                    android:id="@+id/tvDescription"
                    style="@style/textViewCustomLight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:maxLines="20"
                    app:layout_constraintStart_toStartOf="@+id/viewDes"
                    app:layout_constraintTop_toBottomOf="@+id/tvLabelDes" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/cvCover"
                android:layout_width="@dimen/size_150"
                android:layout_height="@dimen/size_240"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_8"
                android:layout_marginEnd="@dimen/margin_24"
                app:cardCornerRadius="@dimen/radius_8"
                app:cardElevation="@dimen/elevation_8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imgPoster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>

            <ImageButton
                android:id="@+id/btnFavorite"
                android:layout_width="@dimen/size_50"
                android:layout_height="@dimen/size_50"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:background="@drawable/button_rounded"
                android:contentDescription="@string/title_content_des_img_favo"
                android:src="@drawable/ic_baseline_favorite_border_24"
                android:tint="@color/white" />
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>