package web.id.wahyou.jetpackapp.ui.main

import androidx.test.espresso.Espresso
import androidx.test.espresso.IdlingRegistry
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.matcher.ViewMatchers
import androidx.test.espresso.matcher.ViewMatchers.withId
import androidx.test.rule.ActivityTestRule
import org.junit.After
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import web.id.wahyou.jetpackapp.R
import web.id.wahyou.jetpackapp.utils.EspressoIdlingResource

class MainActivityTest {

    @Suppress("DEPRECATION")
    @get:Rule
    var activityRule = ActivityTestRule(MainActivity::class.java)

    @Before
    fun setUp() {
        IdlingRegistry.getInstance().register(EspressoIdlingResource.espressoTestIdlingResource)
    }

    @After
    fun tearDown() {
        IdlingRegistry.getInstance().unregister(EspressoIdlingResource.espressoTestIdlingResource)
    }

    @Test
    fun checkBottomBarDisplayed() {
        Espresso.onView(withId(R.id.navView)).perform(ViewActions.click()).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }

    @Test
    fun checkOtherBottomBar() {
        Espresso.onView(withId(R.id.navigation_tvshow)).perform(ViewActions.click()).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.navigation_movie)).perform(ViewActions.click()).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.navigation_favorite)).perform(ViewActions.click()).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.navigation_tvshow)).perform(ViewActions.click()).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
        Espresso.onView(withId(R.id.navigation_movie)).perform(ViewActions.click()).check(ViewAssertions.matches(ViewMatchers.isDisplayed()))
    }
}